--- a/sass/otros/_mediaq.scss
+++ b/sass/otros/_mediaq.scss
@@ -9,34 +9,31 @@
     /*Index*/
     // noticia1
     /* noticia1 */
-    .not1{
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-       h3{
-         text-align: center;
-        }
-       p{
-         text-align: center;
-         text-align: justify;
-       }
-       img{
-         width: 80%;
-        }
-     } 
-     // iframe
-     /* iframe */
-    .presentacion{
-       iframe{
-          width: 100%;
-       }
-     
-    }
-   //  cards
-  /*cards*/
-    
-
+   .not1{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+      h3{
+      text-align: center;
+      }
+      p{
+      text-align: center;
+      text-align: justify;
+      }
+      img{
+      width: 80%;
+      }
+   } 
+   // iframe
+   /* iframe */
+   .presentacion{
+      iframe{
+         width: 100%;
+      }
+   
+   }
+   //--------------------------------------------------------------------------------------------------------------------  
    //   La Bombonera
    /* La bombonera */
    .historia{
@@ -47,7 +44,8 @@
       h2{
          text-align: center;
       }
-   }  
+   } 
+   // -------------------------------------------------------------------------------------------------------------------- 
    //   Hitos historicos
    /*hitos historicos*/
    .la-sexta h2{
@@ -56,6 +54,7 @@
    .carousel{
       margin-bottom: 20px;
    }
+   // --------------------------------------------------------------------------------------------------------------------
    // Contactanos
       /*contactanos*/
    .contactanos{
@@ -73,31 +72,32 @@
       }
    }
  }
+  // --------------------------------------------------------------------------------------------------------------------
 
 //  Mobile
 /*mobile*/
  @media screen and (max-width: 576px) {
 
-    //INDEX
-    /*Index*/
-    // noticia1
-    /* noticia1 */
-    .not1{
-     display: flex;
-     flex-direction: column;
-     justify-content: center;
-     align-items: center;
-      h3{
-        text-align: center;
-       }
-      p{
-        text-align: center;
-        text-align: justify;
+   //INDEX
+   /*Index*/
+   // noticia1
+   /* noticia1 */
+   .not1{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   h3{
+      text-align: center;
       }
-      img{
-        width: 80%;
-       }
-    } 
+   p{
+      text-align: center;
+      text-align: justify;
+   }
+   img{
+      width: 80%;
+      }
+   } 
     // iframe
     /* iframe */
    .presentacion{
@@ -106,6 +106,7 @@
       }
     
    }
+    // --------------------------------------------------------------------------------------------------------------------
 //   La Bombonera
    /* La bombonera */
    .historia{
@@ -117,40 +118,41 @@
          text-align: center;
       }
    }
-  .img5{
-     display: none;
-  }
-  .grid-container{
-     display: grid;
-     grid-template-columns: repeat(2, 1fr);
-     grid-template-rows: repeat(2, 1fr);
-     grid-gap: 5px;
-  }
+   .img5{
+      display: none;
+   }
+   .grid-container{
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: repeat(2, 1fr);
+      grid-gap: 5px;
+   }
 
+ // --------------------------------------------------------------------------------------------------------------------
 //   Hitos historicos
 /*hitos historicos*/
-  .la-sexta h2{
-   text-align: center;
-  }
-  .carousel{
-   margin-bottom: 20px;
-  }
-
+   .la-sexta h2{
+      text-align: center;
+   }
+   .carousel{
+      margin-bottom: 20px;
+   }
+ // --------------------------------------------------------------------------------------------------------------------
 // Contactanos
 /*contactanos*/
-.contactanos{
-   h1{
-      text-align: center;
-   }
-   p{
-      text-align: center;
-   }
-   .formulario{
-      iframe{
-         margin-top: 5px;
-         width: 100%;
+   .contactanos{
+      h1{
+         text-align: center;
+      }
+      p{
+         text-align: center;
+      }
+      .formulario{
+         iframe{
+            margin-top: 5px;
+            width: 100%;
+         }
       }
    }
-}
 
 }
